// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordMask /> renders password mask 1`] = `
<div
  className={undefined}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <input
    autoFocus={true}
    className=""
    id="password"
    maxLength={16}
    name="password"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="Enter password"
    readOnly={undefined}
    style={
      Object {
        "borderColor": "aqua",
        "display": "block",
        "width": "100%",
      }
    }
    type="password"
    value=""
  />
  <input
    className=""
    id=""
    maxLength={16}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="Enter password"
    readOnly={undefined}
    style={
      Object {
        "borderColor": "aqua",
        "display": "none",
        "width": "100%",
      }
    }
    type="text"
    value=""
  />
  <a
    className=""
    href=""
    onClick={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "MozUserSelect": "none",
        "WebkitUserSelect": "none",
        "background": "cornsilk",
        "borderRadius": "2px",
        "color": "#000",
        "marginTop": "-13px",
        "padding": "4px 10px",
        "position": "absolute",
        "right": "6px",
        "textAlign": "center",
        "textDecoration": "none",
        "top": "50%",
        "userSelect": "none",
      }
    }
    tabIndex={-1}
  >
    Hide it
  </a>
</div>
`;

exports[`<PasswordMask /> renders password mask without any styles 1`] = `
<div
  className={undefined}
  style={Object {}}
>
  <input
    autoFocus={undefined}
    className=""
    id="password"
    maxLength={undefined}
    name="password"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    readOnly={undefined}
    style={
      Object {
        "display": "block",
      }
    }
    type="password"
    value=""
  />
  <input
    className=""
    id=""
    maxLength={undefined}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    readOnly={undefined}
    style={
      Object {
        "display": "none",
      }
    }
    type="text"
    value=""
  />
  <a
    className=""
    href=""
    onClick={[Function]}
    onMouseDown={[Function]}
    style={Object {}}
    tabIndex={-1}
  >
    Show
  </a>
</div>
`;
